infra/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: default
  labels:
    app: frontend
spec:
  ports:
    - port: 80
      targetPort: 3000
      name: http
  selector:
    app: frontend
